gitea.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  labels:
    for-gitea: 'true'
spec:
  type: ClusterIP
  selector:
    app: gitea
  ports:
  - name: http
    port: 3000
    targetPort: http
  - name: ssh
    port: 22
    targetPort: ssh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    for-gitea: 'true'
spec:
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
        for-gitea: 'true'
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.16.9
        resources:
          limits:
            memory: "1000Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 3000
        - name: ssh
          containerPort: 22
