ingress-gitea.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitea
  annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
 
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitea.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 3000
